fixed sample AIO key and username

--- a/pi_code/adafruitio.ini
+++ b/pi_code/adafruitio.ini
@@ -2,8 +2,8 @@
 #
 # Put your Adafruit.io username and key here
 #
-adafruit_io_key = '32jlkjflkj3lkj4lk32j4lkjlkj' 
-adafruit_io_username = 'alanc98' 
+adafruit_io_key = 'PUT_YOUR_ADAFRUIT_IO_KEY_HERE' 
+adafruit_io_username = 'PUT_YOUR_ADAFRUIT_IO_USERNAME_HERE' 
 
 #
 # publish_max will determine how often the mqtt
