finished adding init file support

--- a/pi_code/adafruitio.ini
+++ b/pi_code/adafruitio.ini
@@ -1,9 +1,10 @@
 [adafruitio]
 #
 # Put your Adafruit.io username and key here
+# Dont use quotes around the data
 #
-adafruit_io_key = 'PUT_YOUR_ADAFRUIT_IO_KEY_HERE' 
-adafruit_io_username = 'PUT_YOUR_ADAFRUIT_IO_USERNAME_HERE' 
+adafruit_io_key = PUT_YOUR_ADAFRUIT_IO_KEY_HERE
+adafruit_io_username = PUT_YOUR_ADAFRUIT_IO_USERNAME_HERE
 
 #
 # publish_max will determine how often the mqtt
@@ -18,5 +19,5 @@ publish_max = 12
 # In case your MQTT broker is not running on localhost
 # you can set the host here
 # 
-mqtt_broker_addr = '127.0.0.1'
+mqtt_broker_addr = 127.0.0.1
 
