--- a/pi_code/dryot.ini
+++ b/pi_code/dryot.ini
@@ -38,8 +38,9 @@ publish_rate = 5
 #
 # If your MQTT server is not on the same machine this
 # script is running on, then change the address below
+# Note: Dont use quotes on the IP address/hostname here 
 #
-mqtt_broker_addr = '127.0.0.1'
+mqtt_broker_addr = 127.0.0.1
 
 [sensor]
 #
